misalignment with comments issue push

--- a/static/css/post.css
+++ b/static/css/post.css
@@ -643,7 +643,7 @@ hr {
   padding-bottom: 20px;
   background-color: #240115;
   padding-left: 20px;
-  /* margin-left: 2em; */
+  margin-left: 2em;
   min-width: 50vw;
   border-radius: 40px;
   margin-bottom: 20px;
